# katengine

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  config.hpp.in
examples/: CMakeLists.txt
examples/src/: main.cpp  main.hpp
libs/: CMakeLists.txt
src/kat/: color.hpp  engine.cpp  engine.hpp  enums.hpp  forward.hpp  structs.hpp  window.cpp  window.hpp
src/kat/platform/: platform.cpp  platform.hpp  windows.cpp  windows.hpp
